# my-toolkit

./: .gitignore  AGENTS.md  CATALOGLOADER_AUDIT.md  CODEX_FUTURE_PLANS.md  CODEX_PIXEL_STRIPS.md  CODEX_TASKS.md  CODEX_TASK_HISTORY.md  HELPERS_API.md  HELPERS_README_AUDIT.md  PERSIST_BOUNDARY_AUDIT.md  README.md  RUN_CODEX_REFACTOR.md  mypy.ini  pyproject.toml
app/: __init__.py
app/adapters/: __init__.py
app/sqlite/: __init__.py
examples/preview_vision/: catalog_seed.py  config_io.py  main_dpg.py
helpers/: bytes_conv.py  fs_utils.py  strip_map.py  strip_preview_ascii.py  theme_palette.py  time_utils.py
helpers/catalog/: README.md  __init__.py  catalog.py  editable.py
helpers/color/: README.md  (+3 more)
my_toolkit/: __init__.py
preview_vision/: catalog_seed.py  config_capture.json  config_capture_uvc.json  config_io.py  main_dpg.py
services/: phrases_service.py  tags_service.py  zones_service.py
tests/: __init__.py  conftest.py  test_architecture_imports.py  test_bytes_conv.py  test_catalog_and_catalogloader.py  test_catalogloader_deprecation.py  test_color_utils_and_theme_palette.py  test_fs_utils.py  test_geometry.py  test_history_del_patch.py  test_math_basic.py  test_persist_boundary.py  test_server_static_file_server.py  test_strip_map_and_preview.py  test_time_utils.py  test_transforms_bytes_rgb_frame.py  test_transforms_imaging_colors.py  test_transforms_imaging_crop.py  test_transforms_imaging_resize.py  test_validation_basic.py  test_validation_time.py  test_wled_http_config.py  test_zones_serde_templates.py
tooling/: mypy_plan.md  ops_refresh.py
(+226 files in other folders)
